--- a/assets/css/my-styles.css
+++ b/assets/css/my-styles.css
@@ -1,3 +1,12 @@
+html, body {
+    background: #FFF;
+}
+
+.container-after-landing {
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
 .button-fix {
     display: flex;
     width: 100%;
@@ -140,8 +149,7 @@ body.homepage #header:after {
     border-right: solid 1px #fff;
 }
 
-#nav>ul:before,
-#nav>ul:after {
+#nav>ul:before, #nav>ul:after {
     border-top: solid 1px #fff;
     border-bottom: solid 1px #fff;
 }
